[FIX] 대중적으로 사용하는 빈배열로 변경